// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validating rule docs class-methods-use-this.mdx code examples ESLint output 1`] = `
"Options: { "ignoreOverrideMethods": true }

abstract class Base {
  abstract method(): void;
  abstract property: () => void;
}

class Derived extends Base {
  override method() {}
  override property = () => {};
}
"
`;

exports[`Validating rule docs class-methods-use-this.mdx code examples ESLint output 2`] = `
"Incorrect
Options: { "ignoreClassesThatImplementAnInterface": true }

class Standalone {
  method() {}
  ~~~~~~ Expected 'this' to be used by class method 'method'.
  property = () => {};
  ~~~~~~~~~~~ Expected 'this' to be used by class method 'property'.
}
"
`;

exports[`Validating rule docs class-methods-use-this.mdx code examples ESLint output 3`] = `
"Correct
Options: { "ignoreClassesThatImplementAnInterface": true }

interface Base {
  method(): void;
}

class Derived implements Base {
  method() {}
  property = () => {};
}
"
`;

exports[`Validating rule docs class-methods-use-this.mdx code examples ESLint output 4`] = `
"Incorrect
Options: { "ignoreClassesThatImplementAnInterface": "public-fields" }

interface Base {
  method(): void;
}

class Derived implements Base {
  method() {}
  property = () => {};

  private privateMethod() {}
  ~~~~~~~~~~~~~~~~~~~~~ Expected 'this' to be used by class method 'privateMethod'.
  private privateProperty = () => {};
  ~~~~~~~~~~~~~~~~~~~~~~~~~~ Expected 'this' to be used by class method 'privateProperty'.

  protected protectedMethod() {}
  ~~~~~~~~~~~~~~~~~~~~~~~~~ Expected 'this' to be used by class method 'protectedMethod'.
  protected protectedProperty = () => {};
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Expected 'this' to be used by class method 'protectedProperty'.
}
"
`;

exports[`Validating rule docs class-methods-use-this.mdx code examples ESLint output 5`] = `
"Correct
Options: { "ignoreClassesThatImplementAnInterface": "public-fields" }

interface Base {
  method(): void;
}

class Derived implements Base {
  method() {}
  property = () => {};
}
"
`;
